force-app/main/default/objects/Candidate_Details__c/Candidate_Details__c.object-meta.xml
<CustomObject>
    <label>Candidate Details</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>