force-app/main/default/objects/Candidate_Details__c/fields/About__c.field-meta.xml
<CustomField>
    <fullName>About__c</fullName>
    <description>a brief description about the candidate</description>
    <label>About</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>