force-app/main/default/objects/Candidate_Details__c/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>email of the candidate(unique identifier)</description>
    <inlineHelpText>Your Email address</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>