force-app/main/default/objects/Candidate_Details__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city where the candidate is currently residing</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>