force-app/main/default/objects/Candidate_Details__c/fields/CTC__c.field-meta.xml
<CustomField>
    <fullName>CTC__c</fullName>
    <inlineHelpText>Your CTC in LPA</inlineHelpText>
    <label>CTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>