force-app/main/default/objects/Candidate_Details__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <inlineHelpText>Add Experience</inlineHelpText>
    <label>Total Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>