force-app/main/default/objects/Candidate_Details__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Title of the candidate</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>