force-app/main/default/objects/Candidate_Details__c/fields/ParsedSkills__c.field-meta.xml
<CustomField>
    <fullName>ParsedSkills__c</fullName>
    <label>ParsedSkills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>