force-app/main/default/objects/Candidate_Details__c/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <description>Picture of the candidate</description>
    <label>Profile Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>