force-app/main/default/objects/Candidate_Details__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>skills that would be entered by the candidate</description>
    <inlineHelpText>Enter Comma separated values</inlineHelpText>
    <label>Skills</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>